--- a/film.html
+++ b/film.html
@@ -821,6 +821,25 @@ function getYouTubeId(url) {
   document.querySelector(".player-box").innerHTML =
     `<video id="filmPlayer" controls playsinline muted crossorigin="anonymous" preload="metadata"></video>`;
   setupPlayer(movieUrl);
+  // === 🧩 Якщо немає HLS-плеєра, але є Telegram-відео ===
+if (!movieUrl && data.telegram_link) {
+  const playerBox = document.querySelector(".player-box");
+  playerBox.innerHTML = `
+    <div style="
+      text-align:center;
+      background:#000;
+      padding:10px;
+      border-radius:12px;
+    ">
+      <iframe
+        src="${data.telegram_link}"
+        style="width:100%;height:480px;border:none;border-radius:12px;"
+        allowfullscreen>
+      </iframe>
+    </div>
+  `;
+}
+
 
   // 🖱️ Обробники кліків
   btnMovie.addEventListener("click", () => {
@@ -831,6 +850,25 @@ function getYouTubeId(url) {
     const box = document.querySelector(".player-box");
     box.innerHTML = `<video id="filmPlayer" controls playsinline muted crossorigin="anonymous" preload="metadata"></video>`;
     setupPlayer(movieUrl);
+    // === 🧩 Якщо немає HLS-плеєра, але є Telegram-відео ===
+if (!movieUrl && data.telegram_link) {
+  const playerBox = document.querySelector(".player-box");
+  playerBox.innerHTML = `
+    <div style="
+      text-align:center;
+      background:#000;
+      padding:10px;
+      border-radius:12px;
+    ">
+      <iframe
+        src="${data.telegram_link}"
+        style="width:100%;height:480px;border:none;border-radius:12px;"
+        allowfullscreen>
+      </iframe>
+    </div>
+  `;
+}
+
   });
 
   btnTrailer.addEventListener("click", () => {
