--- a/film.html
+++ b/film.html
@@ -822,22 +822,23 @@ function getYouTubeId(url) {
     `<video id="filmPlayer" controls playsinline muted crossorigin="anonymous" preload="metadata"></video>`;
   setupPlayer(movieUrl);
   // === 🧩 Якщо немає HLS-плеєра, але є Telegram-відео ===
+// === 🧩 Якщо немає HLS-плеєра, але є Telegram-відео ===
 if (!movieUrl && data.telegram_link) {
   const playerBox = document.querySelector(".player-box");
   playerBox.innerHTML = `
-    <div style="
-      text-align:center;
-      background:#000;
-      padding:10px;
-      border-radius:12px;
-    ">
-      <iframe
-        src="${data.telegram_link}"
-        style="width:100%;height:480px;border:none;border-radius:12px;"
-        allowfullscreen>
-      </iframe>
-    </div>
+    <div id="tgPlayerBox" style="background:#000;border-radius:12px;padding:10px;"></div>
   `;
+
+  // отримуємо postId: baza_site14gt69t2tgdr2csr62b2b0d/123
+  const postId = data.telegram_link.replace(/^https?:\/\/t\.me\//, "");
+
+  // створюємо Telegram widget script
+  const s = document.createElement("script");
+  s.async = true;
+  s.src = "https://telegram.org/js/telegram-widget.js?22";
+  s.setAttribute("data-telegram-post", postId);
+  s.setAttribute("data-width", "100%");
+  document.getElementById("tgPlayerBox").appendChild(s);
 }
 
 
@@ -851,22 +852,23 @@ if (!movieUrl && data.telegram_link) {
     box.innerHTML = `<video id="filmPlayer" controls playsinline muted crossorigin="anonymous" preload="metadata"></video>`;
     setupPlayer(movieUrl);
     // === 🧩 Якщо немає HLS-плеєра, але є Telegram-відео ===
+// === 🧩 Якщо немає HLS-плеєра, але є Telegram-відео ===
 if (!movieUrl && data.telegram_link) {
   const playerBox = document.querySelector(".player-box");
   playerBox.innerHTML = `
-    <div style="
-      text-align:center;
-      background:#000;
-      padding:10px;
-      border-radius:12px;
-    ">
-      <iframe
-        src="${data.telegram_link}"
-        style="width:100%;height:480px;border:none;border-radius:12px;"
-        allowfullscreen>
-      </iframe>
-    </div>
+    <div id="tgPlayerBox" style="background:#000;border-radius:12px;padding:10px;"></div>
   `;
+
+  // отримуємо postId: baza_site14gt69t2tgdr2csr62b2b0d/123
+  const postId = data.telegram_link.replace(/^https?:\/\/t\.me\//, "");
+
+  // створюємо Telegram widget script
+  const s = document.createElement("script");
+  s.async = true;
+  s.src = "https://telegram.org/js/telegram-widget.js?22";
+  s.setAttribute("data-telegram-post", postId);
+  s.setAttribute("data-width", "100%");
+  document.getElementById("tgPlayerBox").appendChild(s);
 }
 
   });
