--- a/film.html
+++ b/film.html
@@ -804,9 +804,24 @@ function getYouTubeId(url) {
   // 🟢 Запускаємо підбірку схожих фільмів
   loadRecommendedFilms(data.title, data.genre);
 
-  // 🔗 Джерела
-  movieUrl   = data.stream_url   || "";
-  trailerUrl = data.trailer_url  || "";
+  
+  // 🔗 Вибір джерела відео
+  movieUrl = "";
+  trailerUrl = data.trailer_url || "";
+  
+  // 1️⃣ Пріоритет — HLS
+  if (data.stream_url && data.stream_url.includes(".m3u8")) {
+    movieUrl = data.stream_url;
+  }
+  // 2️⃣ Якщо HLS нема — пробуємо Google Drive
+  else if (data.drive_url && data.drive_url.includes("drive.google.com")) {
+    movieUrl = data.drive_url;
+  }
+  // 3️⃣ Якщо нічого — fallback на Telegram
+  else if (data.telegram_file_id) {
+    movieUrl = null; // позначка для Telegram
+  }
+
 
   // 🎛️ Кнопки
   const btnMovie   = document.getElementById("btnMovie");
@@ -820,7 +835,39 @@ function getYouTubeId(url) {
   currentSource = "movie";
   document.querySelector(".player-box").innerHTML =
     `<video id="filmPlayer" controls playsinline muted crossorigin="anonymous" preload="metadata"></video>`;
+  if (movieUrl) {
   setupPlayer(movieUrl);
+} else if (data.telegram_file_id) {
+  // === Fallback: Telegram file_id
+  const box = document.querySelector(".player-box");
+  box.innerHTML = `
+    <video id="filmPlayer" controls playsinline preload="metadata"
+           style="width:100%;border-radius:12px;outline:none;"></video>`;
+  const tag = document.getElementById("filmPlayer");
+
+  try {
+    const resp = await fetch(
+      `https://video-backend-lg1e.onrender.com/get_video/${encodeURIComponent(data.telegram_file_id)}`
+    );
+    const json = await resp.json();
+
+    if (json.url) {
+      const src = document.createElement("source");
+      src.src = json.url;
+      src.type = "video/mp4";
+      tag.appendChild(src);
+      const info = document.createElement("div");
+      info.innerHTML = "🎞️ Відео завантажено з Telegram";
+      info.style = "color:#00fff2;text-align:center;margin-top:8px;font-size:14px;";
+      box.appendChild(info);
+    } else {
+      console.warn("❌ Не знайдено URL у відповіді бекенду:", json);
+    }
+  } catch (err) {
+    console.error("❌ Помилка при отриманні відео:", err);
+  }
+}
+
 
   // 🖱️ Обробники кліків
   btnMovie.addEventListener("click", () => {
@@ -830,7 +877,39 @@ function getYouTubeId(url) {
     btnTrailer.classList.remove("active");
     const box = document.querySelector(".player-box");
     box.innerHTML = `<video id="filmPlayer" controls playsinline muted crossorigin="anonymous" preload="metadata"></video>`;
-    setupPlayer(movieUrl);
+    if (movieUrl) {
+  setupPlayer(movieUrl);
+} else if (data.telegram_file_id) {
+  // === Fallback: Telegram file_id
+  const box = document.querySelector(".player-box");
+  box.innerHTML = `
+    <video id="filmPlayer" controls playsinline preload="metadata"
+           style="width:100%;border-radius:12px;outline:none;"></video>`;
+  const tag = document.getElementById("filmPlayer");
+
+  try {
+    const resp = await fetch(
+      `https://video-backend-lg1e.onrender.com/get_video/${encodeURIComponent(data.telegram_file_id)}`
+    );
+    const json = await resp.json();
+
+    if (json.url) {
+      const src = document.createElement("source");
+      src.src = json.url;
+      src.type = "video/mp4";
+      tag.appendChild(src);
+      const info = document.createElement("div");
+      info.innerHTML = "🎞️ Відео завантажено з Telegram";
+      info.style = "color:#00fff2;text-align:center;margin-top:8px;font-size:14px;";
+      box.appendChild(info);
+    } else {
+      console.warn("❌ Не знайдено URL у відповіді бекенду:", json);
+    }
+  } catch (err) {
+    console.error("❌ Помилка при отриманні відео:", err);
+  }
+}
+
   });
 
   btnTrailer.addEventListener("click", () => {
