--- a/film.html
+++ b/film.html
@@ -642,6 +642,21 @@ function getYouTubeId(url) {
         console.warn("Порожній URL для відтворення");
         return;
       }
+      // 🎬 Перевірка — якщо посилання з Google Drive
+      if (url.includes("drive.google.com") || url.includes("uc?export=download")) {
+        const fileIdMatch = url.match(/\/d\/([^/]+)\//);
+        const fileId = fileIdMatch ? fileIdMatch[1] : null;
+      
+        // Формуємо пряме посилання для плеєра
+        const direct = fileId
+          ? `https://drive.google.com/uc?export=download&id=${fileId}`
+          : url;
+      
+        player.src = direct;
+        console.log("🎥 Відтворення з Google Drive:", direct);
+        return; // ⛔ зупиняємо далі, щоб не оброблявся як .m3u8
+      }
+
 
       if (url.endsWith(".m3u8")) {
         if (window.Hls && Hls.isSupported()) {
