--- a/header.html
+++ b/header.html
@@ -23,6 +23,7 @@
       <a href="/category.html?type=Фільм&genre=Комедія">Комедія</a>
       <a href="/category.html?type=Фільм&genre=Кримінал">Кримінал</a>
       <a href="/category.html?type=Фільм&genre=Мелодрама">Мелодрама</a>
+      <a href="/category.html?type=Фільм&genre=Романтичні">Романтичні</a>
       <a href="/category.html?type=Фільм&genre=Містика">Містика</a>
       <a href="/category.html?type=Фільм&genre=Музика">Музика</a>
       <a href="/category.html?type=Фільм&genre=Мюзикл">Мюзикл</a>
