--- a/category.html
+++ b/category.html
@@ -176,10 +176,22 @@ async function loadFilms(sortMode = currentSort) {
   currentSort = sortMode;
 
   let query = supabase.from("films_site").select("*");
-  if (type)  query = query.ilike("type",  `%${type}%`);
+  if (type)  query = query.eq("type", type); // точний тип
   if (genre) query = query.ilike("genre", `%${genre}%`);
 
   const { data, error } = await query.order("id", { ascending: false });
+  // 🎯 Фільтрація за точним жанром (щоб "Драма" не ловила "Мелодрама")
+let filtered = data || [];
+
+if (genre) {
+  filtered = filtered.filter(row => {
+    const genres = (row.genre || "")
+      .split(",")
+      .map(g => g.trim().toLowerCase());
+    return genres.includes(genre.toLowerCase());
+  });
+}
+
 
   const grid = document.getElementById("filmGrid");
   grid.innerHTML = "";
@@ -194,7 +206,7 @@ async function loadFilms(sortMode = currentSort) {
   }
 
   // ✅ якщо це серіали — групуємо за назвою
-  let items = [...data];
+  let items = [...filtered];
   if (type.toLowerCase().includes("серіал") || type.toLowerCase().includes("мультсеріал")) {
     const map = new Map();
     items.forEach(row => {
