--- a/film.html
+++ b/film.html
@@ -794,23 +794,26 @@ if (url.includes("drive.google.com")) {
     }
 
     if (!hasPro) {
-      const playerBox = document.querySelector('.player-box');
-      playerBox.innerHTML = `
-        <div style="
-          background:#000;
-          color:#00fff2;
-          text-align:center;
-          padding:40px;
-          border-radius:12px;
-          border:1px solid rgba(0,255,255,0.3);
-          box-shadow:0 0 30px rgba(0,255,255,0.15);
-        ">
-          💎 Цей фільм доступний лише для PRO користувачів.<br><br>
-          <a href="profile.html" style="color:#fff;text-decoration:underline;">Отримати PRO</a>
-        </div>
-      `;
-      return; // ❗ зупиняємо виконання, не показуємо плеєр
-    }
+  const playerBox = document.querySelector('.player-box');
+  // ✅ показуємо опис, але блокуємо лише відео
+  playerBox.innerHTML = `
+    <div style="
+      background:#000;
+      color:#00fff2;
+      text-align:center;
+      padding:40px;
+      border-radius:12px;
+      border:1px solid rgba(0,255,255,0.3);
+      box-shadow:0 0 30px rgba(0,255,255,0.15);
+    ">
+      💎 Цей фільм доступний лише для PRO користувачів.<br><br>
+      <a href="profile.html" style="color:#fff;text-decoration:underline;">Отримати PRO</a>
+    </div>
+  `;
+  // ❌ НЕ зупиняємо виконання — решта сторінки (опис, рік, жанр) залишиться видимою
+  return; 
+}
+
   }
 
 
