--- a/film.html
+++ b/film.html
@@ -844,13 +844,36 @@ btnTrailer.disabled = !trailerUrl;
 
 // ▶️ Початково показуємо ФІЛЬМ у звичайному відео-плеєрі (без автозапуску)
 currentSource = "movie";
-document.querySelector(".player-box").innerHTML =
-  `<video id="filmPlayer" controls playsinline muted crossorigin="anonymous" preload="metadata"></video>`;
 
-// 🔹 показуємо відео лише якщо дозволено
+// якщо користувач має PRO — показуємо відео
 if (hasPro) {
+  document.querySelector(".player-box").innerHTML =
+    `<video id="filmPlayer" controls playsinline muted crossorigin="anonymous" preload="metadata"></video>`;
   setupPlayer(movieUrl);
 }
+// якщо НЕ має PRO — показуємо банер
+else {
+  document.querySelector(".player-box").innerHTML = `
+    <div style="
+      background:#000;
+      color:#00fff2;
+      text-align:center;
+      padding:45px 20px;
+      border-radius:12px;
+      border:1px solid rgba(0,255,255,0.3);
+      box-shadow:0 0 30px rgba(0,255,255,0.15);
+      font-size:18px;
+      line-height:1.6;
+    ">
+      💎 Цей фільм доступний лише для <b>PRO користувачів</b>.<br><br>
+      <a href="profile.html" 
+         style="color:#fff;text-decoration:underline;font-weight:600;">
+         Отримати PRO доступ
+      </a>
+    </div>
+  `;
+}
+
 
 // 🖱️ Обробники кліків
 btnMovie.addEventListener("click", () => {
