--- a/series.html
+++ b/series.html
@@ -504,45 +504,54 @@
     document.getElementById("seriesImdb").textContent  = first.imdb  || "—";
     document.getElementById("seriesDesc").textContent  = first.description || "Опис відсутній";
 
-        // 🧩 Перевірка PRO-доступу
-    const isProSeries = String(first.pro_access || '').toUpperCase() === 'PRO';
-    if (isProSeries) {
-      const user = JSON.parse(localStorage.getItem('telegram_user') || 'null');
-      const userId = user?.id ? String(user.id) : null;
-      let hasPro = false;
+// 🧩 Перевірка PRO-доступу для серіалів
+let hasPro = true; // за замовчуванням усі бачать плеєр
+const isProSeries = String(first.pro_access || '').toUpperCase() === 'PRO';
 
-      try {
-        const resp = await fetch(`https://script.google.com/macros/s/AKfycbwUULSEmTKFORqOa3VwnQijTmNGw7Mt8bFd82G_HR7xwPSNlarMzE3Tmyrn1nju5WVPbA/exec?user_id=${encodeURIComponent(userId)}`);
-        const json = await resp.json();
-        hasPro = json?.isPro === true;
-      } catch (e) {
-        console.warn('Помилка перевірки PRO:', e);
-      }
+if (isProSeries) {
+  hasPro = false;
+  const user = JSON.parse(localStorage.getItem('telegram_user') || 'null');
+  const userId = user?.id ? String(user.id) : null;
 
-      if (!hasPro) {
-        const playerBox = document.querySelector('.player-box');
-        playerBox.innerHTML = `
-          <div style="
-            background:#000;
-            color:#00fff2;
-            text-align:center;
-            padding:40px;
-            border-radius:12px;
-            border:1px solid rgba(0,255,255,0.3);
-            box-shadow:0 0 30px rgba(0,255,255,0.15);
-          ">
-            💎 Цей серіал доступний лише для PRO користувачів.<br><br>
-            <a href="profile.html" style="color:#fff;text-decoration:underline;">Отримати PRO</a>
-          </div>
-        `;
-        return; // ❗ зупиняємо виконання, не показуємо плеєр
-      }
-    }
+  try {
+    const resp = await fetch(`https://script.google.com/macros/s/AKfycbwUULSEmTKFORqOa3VwnQijTmNGw7Mt8bFd82G_HR7xwPSNlarMzE3Tmyrn1nju5WVPbA/exec?user_id=${encodeURIComponent(userId)}`);
+    const json = await resp.json();
+    hasPro = json?.isPro === true;
+  } catch (e) {
+    console.warn('Помилка перевірки PRO:', e);
+  }
+}
 
 
-    // встановлюємо перше джерело
-    useSource(first.stream_url || "");
-    player.pause();
+
+// 🎬 Якщо користувач має PRO або серіал не PRO — показуємо відео
+if (hasPro) {
+  useSource(first.stream_url || "");
+  player.pause();
+} 
+// 🎬 Якщо користувач без PRO — показуємо банер
+else {
+  const playerBox = document.querySelector('.player-box');
+  playerBox.innerHTML = `
+    <div style="
+      background:#000;
+      color:#00fff2;
+      text-align:center;
+      padding:45px 20px;
+      border-radius:12px;
+      border:1px solid rgba(0,255,255,0.3);
+      box-shadow:0 0 30px rgba(0,255,255,0.15);
+      font-size:18px;
+      line-height:1.6;
+    ">
+      💎 Цей серіал доступний лише для <b>PRO користувачів</b>.<br><br>
+      <a href="profile.html" 
+         style="color:#fff;text-decoration:underline;font-weight:600;">
+         Отримати PRO доступ
+      </a>
+    </div>
+  `;
+}
 
     // малюємо список серій, згруповано по сезонах
     const container = document.getElementById("episodesContainer");
